update to rawdata converter core 0.11.6